# CodeGraph

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
crates/codegraph-bash/: Cargo.toml
crates/codegraph-bash/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-c/: Cargo.toml  README.md
crates/codegraph-c/benches/: parsing.rs
crates/codegraph-c/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  preprocessor.rs  visitor.rs
crates/codegraph-c/tests/: integration_tests.rs
crates/codegraph-cobol/: Cargo.toml  build.rs
crates/codegraph-cobol/benches/: parsing.rs
crates/codegraph-cobol/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_cobol.rs  visitor.rs
crates/codegraph-cobol/tests/: integration_tests.rs
crates/codegraph-cobol/tree-sitter-cobol-src/: scanner.c
crates/codegraph-cpp/: Cargo.toml  README.md
crates/codegraph-cpp/benches/: parsing.rs
crates/codegraph-cpp/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-cpp/tests/: integration_tests.rs
crates/codegraph-csharp/: Cargo.toml  README.md
crates/codegraph-csharp/benches/: parsing.rs
crates/codegraph-csharp/src/: aspx.rs  extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-csharp/tests/: integration_tests.rs
crates/codegraph-css/: Cargo.toml
crates/codegraph-css/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-css/tests/: integration_tests.rs
crates/codegraph-dart/: Cargo.toml  build.rs
crates/codegraph-dart/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_dart.rs  visitor.rs
crates/codegraph-dart/tests/: integration_tests.rs
crates/codegraph-elixir/: Cargo.toml
crates/codegraph-elixir/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-erlang/: Cargo.toml
crates/codegraph-erlang/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-erlang/tests/: integration_tests.rs
crates/codegraph-fortran/: Cargo.toml  build.rs
crates/codegraph-fortran/benches/: parsing.rs
crates/codegraph-fortran/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_fortran.rs  visitor.rs
crates/codegraph-fortran/tests/: integration_tests.rs
crates/codegraph-go/: Cargo.toml  README.md
crates/codegraph-go/benches/: parsing.rs
crates/codegraph-go/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-go/tests/: integration_tests.rs
crates/codegraph-harness/: Cargo.toml
crates/codegraph-harness/src/: bless.rs  case.rs  compare.rs  jsonrpc.rs  main.rs  normalize.rs  profiles.rs  report.rs  runner.rs
crates/codegraph-haskell/: Cargo.toml
crates/codegraph-haskell/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-hcl/: Cargo.toml
crates/codegraph-hcl/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-java/: Cargo.toml  README.md
crates/codegraph-java/benches/: parsing.rs
crates/codegraph-java/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-java/tests/: integration_tests.rs
crates/codegraph-kotlin/: Cargo.toml  README.md  build.rs
crates/codegraph-kotlin/benches/: parsing.rs
crates/codegraph-kotlin/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_kotlin.rs  visitor.rs
crates/codegraph-kotlin/tests/: integration_tests.rs
crates/codegraph-ocaml/: Cargo.toml
crates/codegraph-ocaml/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-parser-api/: Cargo.toml
crates/codegraph-parser-api/src/: complexity.rs  config.rs  errors.rs  ir.rs  lib.rs  metrics.rs  tests.rs  traits.rs
crates/codegraph-php/: Cargo.toml  README.md
crates/codegraph-php/benches/: parsing.rs
crates/codegraph-php/examples/: basic_parse.rs
crates/codegraph-php/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-php/tests/: integration_tests.rs
crates/codegraph-python/: Cargo.toml  README.md
crates/codegraph-python/benches/: parsing.rs
crates/codegraph-python/examples/: basic_parse.rs  debug_calls.rs  parse_project.rs
crates/codegraph-python/src/: builder.rs  config.rs  error.rs  extractor.rs  lib.rs  parser.rs  parser_impl.rs  visitor.rs
crates/codegraph-python/tests/: integration_coverage_tests.rs  integration_tests.rs  parser_impl_tests.rs  parser_trait_tests.rs  project_parsing_tests.rs
crates/codegraph-ruby/: Cargo.toml  README.md
crates/codegraph-ruby/benches/: parsing.rs
crates/codegraph-ruby/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-ruby/tests/: integration_tests.rs
crates/codegraph-rust/: Cargo.toml  README.md
crates/codegraph-rust/benches/: parsing.rs
crates/codegraph-rust/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-rust/tests/: integration_tests.rs
crates/codegraph-server/: Cargo.toml  build.rs
crates/codegraph-server/src/: backend.rs  branch_watcher.rs  cache.rs  crash_phase.rs  custom_requests.rs  daemon.rs  embed_queue.rs  error.rs  index.rs  index_state.rs  indexer.rs  lib.rs  lsp_pro_hooks.rs  main.rs  memory.rs  metadata.rs  parser_registry.rs  runtime_deps.rs  telemetry.rs  watcher.rs
crates/codegraph-server/tests/: import_integration_test.rs  parser_graph_properties_test.rs
crates/codegraph-solidity/: Cargo.toml
crates/codegraph-solidity/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-solidity/tests/: integration_tests.rs
crates/codegraph-swift/: Cargo.toml
crates/codegraph-swift/benches/: parsing.rs
crates/codegraph-swift/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-swift/tests/: integration_tests.rs
crates/codegraph-tcl/: Cargo.toml  README.md  build.rs
crates/codegraph-tcl/benches/: parsing.rs
crates/codegraph-toml/: Cargo.toml  build.rs
crates/codegraph-typescript/: Cargo.toml  README.md
crates/codegraph-verilog/: Cargo.toml  build.rs
(+540 files in other folders)
