# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-bash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bash/Shell parser for CodeGraph"

[dependencies]
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
rayon = "1.10"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"

[lib]
name = "codegraph_bash"
path = "src/lib.rs"
