# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-cobol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "COBOL parser for CodeGraph - extracts code entities and relationships from COBOL source files"
keywords = ["cobol", "parser", "code-analysis", "tree-sitter"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_cobol"
path = "src/lib.rs"
