# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-java"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Java parser for CodeGraph - extracts code entities and relationships from Java source files"
keywords = ["java", "parser", "code-analysis"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Workspace dependencies
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

# Java parser
tree-sitter = "0.25"
tree-sitter-java = "0.23"
rayon = "1.10"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_java"
path = "src/lib.rs"
