# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-kotlin"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kotlin parser for CodeGraph - extracts code entities and relationships from Kotlin source files"
keywords = ["kotlin", "parser", "code-analysis"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Workspace dependencies
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

# Kotlin parser
tree-sitter = "0.25"
tree-sitter-language = "0.1"
rayon = "1.10"

[build-dependencies]
cc = "1.0"
# Listed so cargo downloads the source; we compile parser.c directly since
# tree-sitter-kotlin 0.3.x uses the old tree-sitter <0.23 API.
tree-sitter-kotlin = "0.3"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_kotlin"
path = "src/lib.rs"
