# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-swift"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Swift parser for CodeGraph - extracts code entities and relationships from Swift source files"
keywords = ["swift", "parser", "code-analysis", "tree-sitter"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Workspace dependencies
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

# Swift parser
tree-sitter = "0.25"
tree-sitter-swift = "0.7"
rayon = "1.10"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_swift"
path = "src/lib.rs"
