# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-tcl"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tcl/SDC/UPF parser for CodeGraph - extracts code entities, EDA commands, and SDC constraints from Tcl source files"
keywords = ["tcl", "sdc", "parser", "code-analysis", "tree-sitter", "eda"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

tree-sitter = "0.25"
tree-sitter-language = "0.1"
rayon = "1.10"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_tcl"
path = "src/lib.rs"
