# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-toml"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TOML parser for CodeGraph"
build = false

[dependencies]
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true
tree-sitter = "0.25"
# tree-sitter-toml-ng 0.7 uses tree-sitter-language (not tree-sitter ≤ 0.22),
# so it is directly compatible with our tree-sitter 0.25 runtime.
tree-sitter-toml-ng = "0.7"
rayon = "1.10"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"

[lib]
name = "codegraph_toml"
path = "src/lib.rs"
