# Copyright 2024-2026 Andrey Vasilevsky <anvanster@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "codegraph-verilog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SystemVerilog/Verilog parser for CodeGraph - extracts code entities and relationships from SystemVerilog and Verilog source files"
keywords = ["systemverilog", "verilog", "hdl", "parser", "tree-sitter"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

tree-sitter = "0.22"
rayon = "1.10"

[build-dependencies]
cc = "1.0"
# tree-sitter-verilog is listed here so cargo downloads its source to the registry.
# Despite its name, this IS the SystemVerilog grammar (see its README). It uses ABI 14
# which is compatible with tree-sitter 0.22. We compile parser.c directly since the
# 1.0 crate uses the newer tree-sitter-language API incompatible with tree-sitter 0.22.
tree-sitter-verilog = "1.0"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_verilog"
path = "src/lib.rs"
